fixing left menu icons alignments

--- a/src/Orchard.Web/Themes/TheAdmin/Assets/Less/includes/structure/left-sidebar.less
+++ b/src/Orchard.Web/Themes/TheAdmin/Assets/Less/includes/structure/left-sidebar.less
@@ -30,6 +30,8 @@
 				.icon{
 					display: block;
 					font-size: 33px;
+                    min-width: 25px;
+                    text-align: center;
 				}
 
 				span{
